--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,12 @@ layout: base
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+<h1 class="site-title">
+  <a href="{{ "/" | relative_url }}">
+    <img src="{{ "/assets/images/logo80px.png" | relative_url }}" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
+    {{ site.title }}
+  </a>
+</h1>
   {%- endif -%}
 
   {{ content }}
