--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@ layout: base
 
 <div class="home">
   {%- if page.title -%}
-<h1 class="page-title">
-  <a href="{{ "/" | relative_url }}">
-    <img src="{{ "/assets/images/logo80px.png" | relative_url }}" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
-    {{ page.title }}
+ <h1 class="page-heading">
+      <a href="{{ "/" | relative_url }}">
+    <img src="{{ "/assets/images/logo.png" | relative_url }}" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
+      {{ page.title }}</h1>
   </a>
 </h1>
   {%- endif -%}
