--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,7 @@ layout: base
 
 <div class="home">
   {%- if page.title -%}
- <h1 class="page-heading">
-      <a href="{{ "/" | relative_url }}">
-    <img src="{{ "/assets/images/logo.png" | relative_url }}" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
-      {{ page.title }}</h1>
-  </a>
-</h1>
+    <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
   {{ content }}
