--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,10 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.minima.nav_pages | default: default_paths -%}
     {%- assign page_titles = site.pages | map: 'title' | compact %}
-    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
-
+<a class="site-title" rel="author" href="{{ '/' | relative_url }}">
+  <img src="{{ "/assets/images/logo80px.png" | relative_url }}" alt="Site Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">
+  {{ site.title | escape }}
+</a>
     {%- unless page_titles == empty %}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" />
