--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,8 @@
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
 
+$heading-color:    #0595D4;
+
 .site-title img {
   height: 40px;
   vertical-align: middle;
