--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
-  <link rel="stylesheet" href="{{ "/assets/main.scss" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 </head>
