--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,1 +1,10 @@
 
+$text-color:       #111 !default;
+$background-color: #fdfdfd !default;
+$brand-color:      #2a7ae2 !default;
+$heading-color:    $brand-color !default;
+$border-color:     #eaeaea !default;
+
+// Fonts
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$code-font-family: Menlo, Monaco, "Courier New", monospace !default;
