--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,8 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+h3 {
+  color: #ffffff;
+  border: 2px solid #0595D4;
+  padding: 0.5rem;
+  box-sizing: border-box;
+}
