--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,8 +1,7 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 h3 {
+   background-color: #0595D4;
   color: #ffffff;
-  border: 2px solid #0595D4;
-  padding: 0.5rem;
-  box-sizing: border-box;
+  border: none;
 }
